refactored the DiffInfoReporter class into ReporterSupport and MarkdownReporter